# src/routes/auth.js
@@ -10,6 +10,7 @@ const { auth } = require('../controllers/auth')
 
 
 router.post('/login',auth.login)
+router.post('/refresh',auth.refresh)
 router.get('/logout',auth.logout)
 /* ------------------------------------------------------- */
 module.exports = router
